# md2epub

./: .gitignore  README.md  book.toml  create.py  pyproject.toml
md2epub/: __init__.py  cli.py  core.py  parser.py  split.py  test_split.py
md2epub/epublib/: __init__.py  consts.py  core.py  io.py  items.py  utils.py
